--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 2022-08-10
+  Features:
+    - Added technology multiplier setting, defaults to 10
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2022-08-09
   Features:
